--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -55,3 +55,7 @@ h1,h2,h3,h4,h5,h6,p,span,body {
 .bg-themePrimaryColor{
   background-color: $themePrimaryColor !important
 }
+
+.cursorPoint:hover {
+  cursor: pointer;
+}
